...
"autofill.logins.list.auth.cancel" = "Cancel";

/* Reason for auth when opening login list */
"autofill.logins.list.auth.reason" = "Unlock device to access passwords";

/* Title for close navigation button */
"autofill.logins.list.close-title" = "Close";

/* Title for button to delete all saved autofill passwords */
"autofill.logins.list.delete.all" = "Delete All";

/* Title for a toggle that enables autofill */
"autofill.logins.list.enable" = "Save and autofill passwords";
...
"fire.confirmation.data.subtitle.historyDisabled" = "May sign you out of accounts";

/* Cookies and site data option title in fire confirmation */
"fire.confirmation.data.title" = "Cookies and Site Data";

/* Tabs option title in fire confirmation */
"fire.confirmation.tabs.title" = "Tabs";

/* Title for fire button confirmation screen */
"fire.confirmation.title" = "Choose What To Delete";

/* No comment provided by engineer. */
"fireButtonAnimation.airstream.name" = "Airstream";
...
"settings.more.search.settings" = "More Search Settings";

/* Subtitle of the 'More Search Settings' button */
"settings.more.search.settings.explanation" = "Customize your language, region, and more";

/* The name of a settings category listing next steps */
"settings.next.steps" = "Next Steps";

/* Label describing a feature which is turned off */
"settings.off" = "Off";

/* Label describing a feature which is turned on */
"settings.on" = "On";
...
"settings.whats.new" = "What’s New";

/* Description on a report broken site page. */
"site.not.working.description" = "Select the option that best describes the problem you experienced.";

/* Dismiss button */
"site.not.working.dismiss" = "Dismiss";

/* Button that triggers flow to report broken site */
"site.not.working.report.broken.site" = "Report Broken Site";

/* Prompt asking user to send report to us if we suspect site may be broken */
"site.not.working.subtitle" = "This helps us improve the browser.";
...
